@@ -1209,6 +1209,10 @@ machopic_select_rtx_section (mode, x, align)
 	   && (GET_CODE (x) == CONST_INT
 	       || GET_CODE (x) == CONST_DOUBLE))
     literal4_section ();
+  else if (GET_CODE (x) == SYMBOL_REF
+             || GET_CODE (x) == CONST
+             || GET_CODE (x) == LABEL_REF)
+    const_data_section ();
   else
     const_section ();
 }
