@@ -196,16 +196,17 @@ Boston, MA 02111-1307, USA.  */
    a SYMBOL_REF.  */
 
 #undef PREFERRED_RELOAD_CLASS
-#define PREFERRED_RELOAD_CLASS(X,CLASS)			\
-  (((GET_CODE (X) == CONST_DOUBLE			\
-    && GET_MODE_CLASS (GET_MODE (X)) == MODE_FLOAT)	\
-   ? NO_REGS						\
-   : (GET_MODE_CLASS (GET_MODE (X)) == MODE_INT 	\
-      && (CLASS) == NON_SPECIAL_REGS)			\
-   ? GENERAL_REGS					\
-   : (GET_CODE (X) == SYMBOL_REF || GET_CODE (X) == HIGH)	\
-   ? BASE_REGS						\
-   : (CLASS)))
+#define PREFERRED_RELOAD_CLASS(X,CLASS)                        \
+  ((GET_CODE (X) == CONST_DOUBLE                               \
+    && GET_MODE_CLASS (GET_MODE (X)) == MODE_FLOAT)            \
+   ? NO_REGS                                                   \
+   : ((GET_CODE (X) == SYMBOL_REF || GET_CODE (X) == HIGH)     \
+      && reg_class_subset_p (BASE_REGS, (CLASS)))              \
+   ? BASE_REGS                                                 \
+   : (GET_MODE_CLASS (GET_MODE (X)) == MODE_INT                \
+      && (CLASS) == NON_SPECIAL_REGS)                          \
+   ? GENERAL_REGS                                              \
+   : (CLASS))
 
 /* Fix for emit_group_load (): force large constants to be pushed via regs.  */
 #define ALWAYS_PUSH_CONSTS_USING_REGS_P		1
