@@ -29,7 +29,7 @@ Boston, MA 02111-1307, USA.  */
 #include "varray.h"
 
 #ifndef __GNUC__
-#error "You should be using 'make bootstrap' -- see installation instructions"
+  #error "You should be using 'make bootstrap' -- see installation instructions"
 #endif
 
 #include "c-common.h"
